Add responsable design

--- a/style/style.css
+++ b/style/style.css
@@ -1,98 +1,6 @@
 /* без медиазапроса, для всех*/
-/*@import url(base.css);	*/
+@import url(base.css);	
 /*для узкоформатных мониторов, планшетов или TV*/
-/*@import url(medium.css) (min-width: 481px) and (max-width:768px);*/
+@import url(medium.css) (min-width: 481px) and (max-width:768px);
 /*для мобильных устройств*/
-/*@import url(small.css) (max-width: 480px;);*/
-
-
-
-.header {
-  background: red;
-}
-
-.ul-container {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  
-  
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.li-item {
-  margin: 0.5rem;
-  color: green;
-  font-size: 0.7rem;
-  text-align: center;
-}
-
-.li-href {
-  display: block;
-  padding: 1rem;
-  text-decoration: none;
-  border-radius: 0.5rem;
-}
-
-.li-href:hover {
-  color: white;
-  background: grey;
-}
-
-.section-container {  
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-}
-
-.section-item {
-  border: 0.15rem ridge #CCCCCC;
-  padding: 0.5rem;
-  border-radius: 1.5rem 1.5rem;
-  vertical-align:middle;
-  margin: 0.5rem;
-  flex: 1 1 31%;
-}
-
-.img {   
-/*   background-size: cover; */
-/*   background-image: url(http://www.anyastarpro.com/wp-content/uploads/2015/07/news-624859_640.png); */
-  max-width: 100%;
-  
-}
-
-.button {
-  float: right;
-}
-
-.footer {
-  background: #CCCCCC;
-  text-align: right;
-}
-
-
-@media all and (min-width: 481px) and (max-width:768px) {
-  .section-container {
-  flex-wrap: wrap;
-}
-
-.item-img, .item-text-first {
-  flex: 1 1 45%;
-}
-
-.item-text-second {
-  flex: 2 2 100%;
-}
-}
-
-@media all and (max-width: 480px) {
-  .section-container {
-  flex-wrap: wrap;  
-}
-
-.section-item {
-    flex: 1 100%;
-}
-}
+@import url(small.css) (max-width: 480px);
