--- a/style/base.css
+++ b/style/base.css
@@ -1,5 +1,13 @@
+html {
+  height:100%;
+}
+
 body {  
   background: #F0E9FB;
+  
+  height:100%;
+  min-height:100%;
+  position:relative;
 }
 
 .header {
@@ -40,13 +48,15 @@ body {
   border-radius: 0.5rem;
 }
 
-.section-container {  
+.section-container {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  
+  align-items: center;
   border-radius: 0.5rem;
-  margin: 0.3rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  height: 90%;
 }
 
 .section-item {
@@ -56,7 +66,6 @@ body {
   vertical-align:middle;
   margin: 0.5rem;
   flex: 1 1 31%;
-  
   background: #D1BDED;
 }
 
@@ -80,5 +89,10 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
   text-align: right;
-  padding: 0.5rem;
+  padding: 0.5rem; 
+  
+  position: absolute;
+  bottom:0;
+  left:0;
+  right:0; 
 }
