--- a/style/medium.css
+++ b/style/medium.css
@@ -1,5 +1,6 @@
 .section-container {
   flex-wrap: wrap;
+  height: auto;
 }
 
 .item-img, .item-text-first {
@@ -9,4 +10,8 @@
 
 .item-text-second {
   flex: 2 2 100%;
+}
+
+.footer {  
+  position: relative;
 }
