--- a/style/base.css
+++ b/style/base.css
@@ -1,5 +1,6 @@
 html {
   height:100%;
+  margin: 0;
 }
 
 body {  
@@ -8,6 +9,7 @@ body {
   height:100%;
   min-height:100%;
   position:relative;
+  margin: 0;
 }
 
 .header {
@@ -67,6 +69,8 @@ body {
   margin: 0.5rem;
   flex: 1 1 31%;
   background: #D1BDED;
+  
+  min-height: 45rem;
 }
 
 .img {   
