--- a/style/small.css
+++ b/style/small.css
@@ -1,5 +1,6 @@
 .section-container {
   flex-wrap: wrap;  
+  height: auto;
 }
 
 .section-item {
@@ -30,4 +31,8 @@
   width:95%;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.footer {
+  position: relative;
 }
