--- a/style/medium.css
+++ b/style/medium.css
@@ -1,6 +1,11 @@
 .section-container {
   flex-wrap: wrap;
   height: auto;
+  align-items: stretch;
+}
+
+.section-item {
+  min-height: 20rem;
 }
 
 .item-img, .item-text-first {
